--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body {
     color: #fff;
     background: #09001d;
+    overflow: hidden;
 }
 
 .header {
@@ -56,15 +57,24 @@ body {
     background: url("background.jpg") no-repeat;
     background-size: cover;
     background-position: center;
+    pointer-events: auto;
     transition: .3s ease;
 }
 
 .main.active {
     filter: blur(15px);
+    pointer-events: none;
+}
+
+.container {
+    display: flex;
+    height: 100vh;
+    width: 200%;
 }
 
 .home {
-    height: 100vh;
+    position: relative;
+    left: -50%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -188,5 +198,71 @@ body {
 .popup-info .btn-group .info-btn:nth-child(2):hover {
     background: #950170;
     border-color: #950170;
+}
 
+.quiz-section {
+    position: relative;
+    /* left: -50%; */
+    left: 0;
+    width: 100%;
+    background: #09001d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    transition: .8s ease-in-out;
+    transition-delay: .25s;
+}
+
+.quiz-section.active {
+    left: 0;
+}
+
+.quiz-section .quiz-box {
+    position: relative;
+    width: 500px;
+    background: transparent;
+    border: 2px solid #c40094;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 30px;
+}
+
+.quiz-box h1 {
+    font-size: 32px;
+    text-align: center;
+    background: linear-gradient(45deg, transparent, #c40094, transparent);
+    border-radius: 6px;
+}
+
+.quiz-box .quiz-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    border-bottom: 2px solid #c40094;
+}
+
+.quiz-header span {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.quiz-header .header-score {
+    background: #c40094;
+    border-radius: 3px;
+    padding: 7px;
+}
+
+.quiz-box .question-text {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.option-list .option {
+    width: 100%;
+    padding: 12px;
+    background: transparent;
+    border: 2px solid rgba(0, 0, 0, .2);
 }
